# esp32_key_bundle

./: .gitmodules  CMakeLists.txt  bits.xlsx  bytes_rfid.txt  partitions_custom.csv  platformio.ini  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old  serial_tx.py  tag_parity.py  tagid_to_raw.c
include/: bitmaps.h  globals_menus.h  littlefs_records.h  macros.h  menus.h  owi.h  rfid.h  touch.h  types.h
lib/ssd1306/: CMakeLists.txt  output.txt
src/: bitmaps.h  bits.xlsx  littlefs_records.c  littlefs_records.h  macros.h  main.c  manchester.h  menus.c  menus.h  owi.c  rfid.c  rfid.h  touch.c
src/menus/: found_loc_list_menu.c  globals_menus.c  loc_options_menu.c  main_menu.c  resolve_location_menu.c  save_tag_menu.c  scanWifiMenu.c  scan_tag_menu.c  search_loc_menu.c  transmit_menu.c
src/menus/options_menus/: change_loc_name_menu.c  delete_loc_menu.c  loc_info_menu.c  transmit_loc_tag_menu.c  update_tag_menu.c  update_wifi_menu.c
